# metadata-crawler

./: .coveragerc  .gitignore  Cargo.toml  LICENSE  README.md  README.rst  benchmark-config.toml  docker-compose.yaml  drs_config.toml  pyproject.toml  shell.nix
.github/workflows/: build_job.yml  ci_job.yml
data/intake/catalog/: catalog.yaml  catalog_copy.yaml  catalog_nonintake.yaml  dkrz_dyamond-winter_disk.json  eerie_catalog.yaml  non_yaml.yaml
data/intake/catalog/FESOM/: FESOM_13_tropo_age_interpolated.yaml  IFS_4.4-FESOM_5-cycle3.yaml  IFS_9-FESOM_5-cycle3.yaml  main.yaml
data/intake/catalog/ICON/: C5.yaml  HAMOCC.yaml  main.yaml  ngc3542.yaml
data/intake/catalog/IFS/: main.yaml  tco-grids-cycle3.yaml  tco1279-ng5-cycle3.yaml  tco1279-ng5-production-years.yaml  tco2559-ng5-cycle3.yaml
data/intake/catalog/defects/: main.yaml
data/intake/catalog/eerie_catalog/: wrong.yaml
data/intake/catalog/minimals/: main.yaml
data/intake/pool/data/AWICM/FESOM2/MESHES_FESOM2.1/orca25/: orca25_griddes_nodes_IFS_cropped_restricted_compressed.nc
data/intake/work/bm1235/a270046/meshes/: NG5_griddes_nodes_IFS_cropped_restricted_compressed.nc
data/intake/work/bm1235/ifs-grids/multio_grids_cdoPython/: 0.25_griddes.nc
data/intake/work/bm1235/ifs-grids/prod/: z_hpx512_c3_cropped_restricted_compressed.nc
data/intake/work/bm1235/ifs-grids/tco_grids/: tco1279_grid_cropped_restricted_compressed.nc  tco2559_grid_restricted.nc  tco2559_gridarea_restricted.nc
data/intake/work/bm1235/k202181/ngc4008a/ngc4008a_P1D_0_cropped.zarr/: .zmetadata
data/intake/work/bm1235/k202181/ngc4008a/ngc4008a_P1D_0_cropped.zarr/cli/: .zattrs
data/intake/work/bm1235/k202181/ngc4008a/ngc4008a_P1D_0_cropped.zarr/clw/: .zarray
data/intake/work/bm1235/k202181/ngc4008a/ngc4008a_P1D_0_cropped.zarr/crs/: .zattrs
data/intake/work/bm1235/k202181/ngc4008a/ngc4008a_P1D_0_cropped.zarr/dzghalf/: .zarray  0.0
data/intake/work/bm1235/k202181/ngc4008a/ngc4008a_P1D_0_cropped.zarr/level_half/: .zarray  .zattrs
data/intake/work/bm1235/k202181/ngc4008a/ngc4008a_P1D_1.zarr/: .zmetadata
data/intake/work/bm1235/k202181/ngc4008a/ngc4008a_P1D_1.zarr/crs/: .zarray  (+1 more)
data/intake/work/bm1235/k202181/ngc4008a/ngc4008a_P1D_2.zarr/: .zgroup  .zmetadata
data/intake/work/bm1235/k202181/ngc4008a/ngc4008a_PT15M_0_cropped.zarr/: .zmetadata
data/intake/work/bm1235/k202181/ngc4008a/ngc4008a_PT3H_0_cropped.zarr/: .zmetadata
data/intake/work/bm1255/m300689/hackathon_hamocc/1degree/: MSM12_r2b8L128SMT_ERA5_nextGEMSpar_2000__conc_zos_mld_slp__mergetime_restricted.nc
data/intake/work/bm1344/AWI/Cycle3/experimental_grid/: fesom_ng5_cropped_restricted_compressed.nc
data/intake/work/minimals/: minimal.nc  minimal_incorrect_units.nc  minimal_no_units.nc  no_variables.nc
data/intake/work/minimals/no_variables.zarr/: .zattrs
data/satellite/regiklim/: RegionaleInformationenzumKlimahandeln2012206.nc
dev-env/: benchmark.py  create-cordex.sh  fs-check.py  setup-swift.sh
docs/: requirements.txt
docs/source/: conf.py  index.rst  whatsnew.rst
docs/source/chapter1-usage/: index.rst  sec1-cli.rst  sec2-python.rst
docs/source/chapter2-config/: index.rst  sec1-datasets.rst  sec2-dialects.rst  sec3-specs.rst  sec4-special.rst  sec5-schema.rst  sec5-templates.rst  sec6-templates.rst  sec7-inheritance.rst
docs/source/chapter3-api/: index.rst  sec1-storage-backends.rst  sec2-index-backends.rst  sec3-cli.rst
metadata_crawler/: data_collector.py  logger.py  run.py
metadata_crawler/api/: cli.py  config.py
metadata_crawler/backends/: hsm.py
metadata_crawler/ingester/: __init__.py  base.py  solr.py
src/helpers_rs/: lib.rs  posix_backend.rs  utils.rs
src/metadata_crawler/: __init__.py  __init__.pyi  __main__.py  _version.py  cli.py  data_collector.py  logger.py  run.py  utils.py
src/metadata_crawler/api/: cli.py  config.py  drs_config.toml  index.py  metadata_stores.py  storage_backend.py
src/metadata_crawler/api/mixin/: lookup_mixin.py  template_mixin.py
src/metadata_crawler/api/stores/: __init__.py  base.py  jsonlines.py  mongodb.py  postgresql.py
src/metadata_crawler/backends/: base.py  intake.py  lookup_tables.py  posix.py  s3.py  swift.py
src/metadata_crawler/ingester/: base.py  file.py  mongo.py  solr.py
src/metadata_crawler/utils/: __init__.py  cftime_utils.py  loop.py
tests/: conftest.py  test_catalogue_reader.py  test_cftime_utils.py  test_cli.py  test_config.py  test_crawl_intake.py  test_crawl_local.py  test_crawl_s3.py  test_crawl_swift.py  test_glob_pattern.py  test_ingest.py  test_lookup_mixin.py  test_render_templates.py  test_storage_backends.py  test_utils.py
tests/mock_crawls/: fs-cat.yml  s3-cat.yml  swift-cat.yml
(+545 files in other folders)
